--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html" class="active">Home2</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="resume.html">Resume ooolio</a></li>
           <li><a href="services.html">Services</a></li>
